--- a/streamlit_launch.ipynb
+++ b/streamlit_launch.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhNf0pFD5W5/FvpW7MumHu",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPhNf0pFD5W5/FvpW7MumHu"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,13 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-    },
     {
       "cell_type": "code",
       "execution_count": null,
